--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "waydroid_script_assets"]
 	path = waydroid_script_assets
 	url = https://github.com/huakim/waydroid_script_assets.git
+[submodule "assets"]
+	path = assets
+	url = https://github.com/huakim/waydroid_script_assets
